fix header gap at page top, take two

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -73,7 +73,8 @@ body {
   /* TABLET */
   .company {
     margin: 0;
-    position: static;
+    /* position: static; */
+    top: 0;
   }
 
   .background {
